--- a/index.html
+++ b/index.html
@@ -15,32 +15,12 @@
     <div id="panel" class="bg-light sidebar"></div>
     <div id="site" class="content">
 
-        <div class="row">
-            <div class="col-sm">
-                <h1>Hi there</h1>
-            </div>
-        </div>
 
-        <div class="row">
-            <div class="col-sm">
-                <p>Lorem ipsum dolor sit amet.</p>
-            </div>
-        </div>
 
-        <div class="row">
-            <div class="col-sm">
-                Одна из трёх колонок
-            </div>
-            <div class="col-sm">
-                Одна из трёх колонок
-            </div>
-            <div class="col-sm">
-                Одна из трёх колонок
-            </div>
-        </div>
 
     </div>
 </div>
 
+<script src="index.js"></script>
 </body>
 </html>
